# attocodepy_swarmtester_9

./: .gitignore  Cargo.toml  README.md  economy_config.toml
.agent/hybrid-swarm/: git_safety.json  swarm.events.jsonl  swarm.manifest.json  swarm.state.json
.agent/hybrid-swarm/agents/: agent-task-1.activity.txt  agent-task-1.prompt.txt  agent-task-1.trace.jsonl  (+21 more)
benches/: bench_colony_tick.rs  bench_market.rs  bench_pathfinding.rs  bench_reputation.rs
src/: config.rs  lib.rs  main.rs  types.rs
src/agents/: actions.rs  caravan.rs  economy_manager.rs  merchant.rs  mod.rs  sensory.rs  traits.rs
src/brain/: craftsman.rs  farmer.rs  idle.rs  interface.rs  miner.rs  mod.rs  shipwright.rs  soldier.rs  trader.rs
src/market/: crafting.rs  gossip.rs  mod.rs  order_book.rs
src/metrics/: emergence.rs  inequality.rs  mod.rs  reporter.rs  tracker.rs
src/rendering/: controls.rs  hud.rs  mod.rs  price_chart.rs  renderer.rs  reputation_overlay.rs  trade_flow.rs
src/world/: bandit.rs  city.rs  mod.rs  reputation.rs  resource_node.rs  road.rs  terrain.rs  world.rs
tasks/: goal.md
tests/: test_bandit.rs  test_brain_craftsman.rs  test_brain_farmer.rs  test_brain_miner.rs  test_brain_shipwright.rs  test_brain_soldier.rs  test_brain_trader.rs  test_caravan.rs  test_city.rs  test_crafting.rs  test_economy_manager.rs  test_emergence.rs  test_gossip.rs  test_merchant_physics.rs  test_order_book.rs  test_pathfinding.rs  test_replay.rs  test_reputation.rs  test_road.rs  test_seasonal.rs  test_sensory.rs  test_terrain.rs  test_world.rs
tests/common/: mod.rs
(+43 files in other folders)
