[package]
name = "swarm-economy"
version = "0.1.0"
edition = "2021"
description = "Emergent Market Economy Simulation"

[features]
default = ["gui"]
gui = ["macroquad"]
headless_only = []

[dependencies]
macroquad = { version = "0.4", optional = true }
noise = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_reputation"
harness = false

[[bench]]
name = "bench_market"
harness = false

[[bench]]
name = "bench_colony_tick"
harness = false

[[bench]]
name = "bench_pathfinding"
harness = false
